# founderpilot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.api  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ralph-feature.ps1  ralph-feature.sh  ralph-feature.sh.backup  ralph-orchestrator.sh  requirements.txt  test-ralph.sh
.claude/: ralph-loop.local.md  settings.local.json
alembic/: env.py
alembic/versions/: 001_add_slack_installations.py  001_create_users_table.py  002_billing_tables.py  002_create_inbox_pilot_tables.py  003_create_meeting_pilot_tables.py  004_create_invoice_pilot_tables.py  007_create_agent_audit_logs.py  008_add_usage_tracking_tables.py  20260131_0001_001_initial_auth_tables.py
docs/: feature_cycle.md  project.md  ralph-feature-loop.md
docs/api/: agent-audit-endpoints.md
docs/architecture/: _index.md
docs/decisions/: ADR-001-python-langgraph.md  ADR-002-fastapi.md  ADR-003-postgresql.md  ADR-004-redis-celery.md  ADR-005-jwt-oauth2.md  ADR-006-nextjs-slack.md  ADR-007-llm-providers.md  ADR-008-observability.md  ADR-009-docker-ecs.md
docs/discovery/: story-mapping-founderops.md
docs/features/: _index.md
frontend/: ANIMATION_GUIDE.md  package-lock.json  package.json
scripts/: README_MIGRATIONS.md  seed_invoice_data.py  seed_plans.py
src/: __init__.py
src/agents/: __init__.py
src/api/: dependencies.py  main.py
src/core/: __init__.py  config.py  database.py  enums.py  exceptions.py  llm.py  logging.py  stripe.py  tracing.py
src/middleware/: rate_limit.py
src/models/: __init__.py  agent_audit_log.py  audit_log.py  base.py  billing.py  integration.py  refresh_token.py  slack_installation.py  usage.py  user.py
src/schemas/: __init__.py  agent_audit.py  auth.py  billing.py  common.py  integration.py  invoice.py  onboarding.py  slack.py  usage.py  user.py
tests/: __init__.py  conftest.py
(+251 files in other folders)
